[package]
description = "Ethcore library"
homepage = "http://ethcore.io"
license = "GPL-3.0"
name = "ethcore"
version = "1.1.0"
authors = ["Ethcore <admin@ethcore.io>"]
build = "build.rs"

[build-dependencies]
syntex = "*"
serde_codegen = "0.7.0"
"ethcore-ipc-codegen" = { path = "../ipc/codegen" }

[dependencies]
log = "0.3"
env_logger = "0.3"
rustc-serialize = "0.3"
heapsize = "0.3"
rust-crypto = "0.2.34"
time = "0.1"
ethcore-util = { path = "../util" }
evmjit = { path = "../evmjit", optional = true }
ethash = { path = "../ethash" }
num_cpus = "0.2"
clippy = { version = "0.0.63", optional = true}
crossbeam = "0.1.5"
lazy_static = "0.1"
ethcore-devtools = { path = "../devtools" }
ethjson = { path = "../json" }
semver = "0.2"
ethcore-ipc-nano = { path = "../ipc/nano" }
"ethcore-ipc" = { path = "../ipc/rpc" }
bincode = "*"
serde = "0.7.0"

[features]
jit = ["evmjit"]
evm-debug = []
json-tests = []
test-heavy = []
dev = ["clippy"]
default = []
